[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recon"
version = "0.1.0"
description = "external-oracle reconciliation for the payment ledger"
readme = "README.md"
requires-python = ">=3.11"
# zero runtime dependencies on purpose: the matching core cannot drift with a
# third-party release, and the engine is trivially auditable.
dependencies = []

[project.scripts]
recon = "recon.cli:main"

[dependency-groups]
dev = ["pytest>=8.0", "hypothesis>=6.100", "mypy>=1.10", "ruff>=0.5"]

[tool.hatch.build.targets.wheel]
packages = ["src/recon"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
